18.02.2011:
        - Disable saveAs dialog for rec when project dialog isn't used (rj)
        - changed the default setting for move single rec with track, default is to NOT move (rj)
15.02.2011:
        - Automation fixes, better detection, not perfect (rj)
14.02.2011:
        - Fixed midi track info panel layout and spacing. Should be much better now. (Tim)
        - Added patch to remove warnings from WillyFoobar (rj)
        - Fixes to graphical automation (rj)
           * select color in menu
           * offset bug, can now edit automation although it's scrolled down
           TODO redrawing issues when using slider automation for instance.
        - mixer slider now updates canvas to get automation updated (rj)
13.02.2011:
        - restore toolbar locations for main window and editors (rj)
        - fixed some layout issues in general settings (rj)
        - removed window geometry from default template, TODO add a menu option for creating
          templates, which might not contain certain types of data, including geometry (rj)
        - fixed bug if jack zombifies during project load which led to a crash (rj)
        - Fixed MusE failing with non-RT kernel. Now falls back to normal 'OTHER' scheduling. (Tim p4.0.16)
        - Fixed dummy audio thread not running FIFO with RT kernel - set PTHREAD_EXPLICIT_SCHED. (Tim p4.0.16)
10.02.2011:
        - added cut/copy/paste and keyboard shortcuts to wave editor (rj)
09.02.2011:
        - fixed regression with Bounce to File and Bounce to Track (rj)
        [[[ By Tim. Marked as p4.0.15 ...
        - Removed MidiDevice::nextPlayEvent, and instead of erasing 'already played events' at top of 
           Audio::processMidi(), let each device erase played events immediately after playing them.
          Still a bit uneasy with this one, but nextPlayEvent was causing some problems. 
          This required forced event erasure, if the track is off, in SynthI::preProcessAlways(),