@@ -1,6 +1,9 @@
 18.02.2011:
         - Disable saveAs dialog for rec when project dialog isn't used (rj)
         - changed the default setting for move single rec with track, default is to NOT move (rj)
+        - fixed (hopefully) bug in shortcut editor, global shortcuts were not always
+          taken into account when checking if a shortcut was in use (rj)
+        - added shortcut F for linedraw, applicable to automation drawing in arranger and pianoroll (rj)
 15.02.2011:
         - Automation fixes, better detection, not perfect (rj)
 14.02.2011:
